force-app/main/default/objects/Table_Action_Override__c/Table_Action_Override__c.object-meta.xml
<CustomObject>
    <description>Stores access control overrides for Table Action Override.</description>
    <label>Table Action Override</label>
    <nameField>
        <displayFormat>TFO-{000000}</displayFormat>
        <label>Table Action Override Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Table Action Overrides</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>