force-app/main/default/objects/Table_Action_Override__c/fields/Action_Visibility__c.field-meta.xml
<CustomField>
    <fullName>Action_Visibility__c</fullName>
    <label>Action Visibility</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Default</fullName>
                <default>true</default>
                <label>Default</label>
            </value>
            <value>
                <fullName>Visible</fullName>
            </value>
            <value>
                <fullName>Hidden</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>