force-app/main/default/objects/Table_Action_Override__c/fields/Context_Type__c.field-meta.xml
<CustomField>
    <fullName>Context_Type__c</fullName>
    <label>Context Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>User</fullName>
            </value>
            <value>
                <fullName>Profile</fullName>
            </value>
            <value>
                <fullName>Role</fullName>
            </value>
            <value>
                <fullName>Public Group</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>