force-app/main/default/objects/Table_Action_Override__c/fields/Table_Action__c.field-meta.xml
<CustomField>
    <fullName>Table_Action__c</fullName>
    <label>Table Action</label>
    <referenceTo>Table_Action__c</referenceTo>
    <relationshipLabel>Action Overrides</relationshipLabel>
    <relationshipName>Action_Overrides</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>